--- a/src/Resources/config/shop_routing.yml
+++ b/src/Resources/config/shop_routing.yml
@@ -1,13 +1,13 @@
 # Delete these routes and define your own shop routes here
 
-acme_sylius_example_static_welcome:
+webgriffe_sylius_italian_invoiceable_order_static_welcome:
     path: /static-welcome/{name}
     defaults:
-        _controller: AcmeSyliusExamplePlugin:Greeting:staticallyGreet
+        _controller: WebgriffeSyliusItalianInvoiceableOrderPlugin:Greeting:staticallyGreet
         name: ~
 
-acme_sylius_example_dynamic_welcome:
+webgriffe_sylius_italian_invoiceable_order_dynamic_welcome:
     path: /dynamic-welcome/{name}
     defaults:
-        _controller: AcmeSyliusExamplePlugin:Greeting:dynamicallyGreet
+        _controller: WebgriffeSyliusItalianInvoiceableOrderPlugin:Greeting:dynamicallyGreet
         name: ~
