--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ before_script:
 
     # Install certificates
     - $SYLIUS_CACHE_DIR/symfony server:ca:install
-    
+
     # Run Chrome Headless
     - google-chrome-stable --enable-automation --disable-background-networking --no-default-browser-check --no-first-run --disable-popup-blocking --disable-default-apps --allow-insecure-localhost --disable-translate --disable-extensions --no-sandbox --enable-features=Metal --headless --remote-debugging-port=9222 --window-size=2880,1800 --proxy-server='direct://' --proxy-bypass-list='*' http://127.0.0.1 > /dev/null 2>&1 &
 
@@ -67,6 +67,7 @@ before_script:
 script:
     - composer validate
 
+    - vendor/bin/ecs check src/
     - vendor/bin/phpstan analyse -c phpstan.neon -l max src/
     - vendor/bin/psalm
 
