--- a/tests/Behat/Resources/suites.yml
+++ b/tests/Behat/Resources/suites.yml
@@ -2,14 +2,13 @@
 
 default:
     suites:
-        filling_invoicing_information:
+        ui_filling_invoicing_information:
             contexts:
                 - sylius.behat.context.hook.doctrine_orm
 
                 - sylius.behat.context.transform.channel
                 - sylius.behat.context.transform.lexical
                 - sylius.behat.context.transform.product
-                - sylius.behat.context.transform.theme
                 - sylius.behat.context.transform.shared_storage
                 - sylius.behat.context.transform.country
                 - sylius.behat.context.transform.address
@@ -18,7 +17,6 @@ default:
                 - sylius.behat.context.setup.channel
                 - sylius.behat.context.setup.product
                 - sylius.behat.context.setup.shipping
-                - sylius.behat.context.setup.theme
                 - sylius.behat.context.setup.geographical
                 - sylius.behat.context.setup.payment
                 - webgriffe_sylius_italian_invoiceable_order.behat.context.setup.channel
@@ -32,4 +30,32 @@ default:
                 - webgriffe_sylius_italian_invoiceable_order.behat.context.ui.shop.checkout.complete
 
             filters:
-                tags: "@filling_invoicing_information"
+                tags: "@filling_invoicing_information && @ui"
+
+        ui_invoiceable_address_book:
+            contexts:
+                - sylius.behat.context.hook.doctrine_orm
+
+                - sylius.behat.context.transform.lexical
+                - sylius.behat.context.transform.product
+                - sylius.behat.context.transform.shared_storage
+                - sylius.behat.context.transform.user
+                - webgriffe_sylius_italian_invoiceable_order.behat.context.transform.address
+
+                - sylius.behat.context.setup.product
+                - sylius.behat.context.setup.shipping
+                - sylius.behat.context.setup.payment
+                - sylius.behat.context.setup.shop_security
+                - webgriffe_sylius_italian_invoiceable_order.behat.context.setup.channel
+                - webgriffe_sylius_italian_invoiceable_order.behat.context.setup.invoiceable_address
+
+                - sylius.behat.context.ui.shop.cart
+                - sylius.behat.context.ui.shop.checkout.addressing
+                - sylius.behat.context.ui.shop.checkout.shipping
+                - sylius.behat.context.ui.shop.checkout.complete
+                - sylius.behat.context.ui.shop.address_book
+                - sylius.behat.context.ui.shop.checkout
+                - webgriffe_sylius_italian_invoiceable_order.behat.context.ui.shop.checkout.addressing
+
+            filters:
+                tags: "@invoiceable_address_book && @ui"
