--- a/composer.json
+++ b/composer.json
@@ -46,6 +46,9 @@
             "Tests\\Webgriffe\\SyliusItalianInvoiceableOrderPlugin\\": "tests/"
         }
     },
+    "conflict": {
+        "symplify/package-builder": "^8.3.25"
+    },
     "autoload-dev": {
         "psr-4": {
             "App\\": "tests/Application/src"
