--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,21 @@
 {
     "name": "webgriffe/sylius-italian-invoiceable-order-plugin",
     "type": "sylius-plugin",
-    "keywords": ["sylius", "sylius-plugin"],
     "description": "Sylius plugin which allows Italian merchants to collect invoice data for their orders.",
+    "keywords": [
+        "sylius",
+        "sylius-plugin"
+    ],
     "license": "MIT",
     "require": {
         "php": "^7.3",
         "sandwich/vies-bundle": "^2.1",
-        "sylius/sylius": "^1.8",
+        "sylius/sylius": "~1.8.0 || ~1.9.0",
         "webmozart/assert": "^1.9"
+    },
+    "conflict": {
+        "api-platform/core": "^2.6",
+        "symplify/package-builder": "^8.3.25"
     },
     "require-dev": {
         "behat/behat": "^3.6.1",
@@ -22,23 +29,31 @@
         "friends-of-behat/suite-settings-extension": "^1.0",
         "friends-of-behat/symfony-extension": "^2.1",
         "friends-of-behat/variadic-extension": "^1.3",
+        "friendsofsymfony/oauth-server-bundle": "^1.6 || >2.0.0-alpha.0 ^2.0@dev",
         "lakion/mink-debug-extension": "^2.0.0",
         "phpspec/phpspec": "^7.0",
         "phpstan/extension-installer": "^1.0",
-        "phpstan/phpstan": "0.12.67",
-        "phpstan/phpstan-doctrine": "0.12.28",
+        "phpstan/phpstan": "0.12.74",
+        "phpstan/phpstan-doctrine": "0.12.31",
         "phpstan/phpstan-strict-rules": "^0.12.0",
-        "phpstan/phpstan-webmozart-assert": "0.12.8",
+        "phpstan/phpstan-webmozart-assert": "0.12.12",
         "phpunit/phpunit": "^9.5",
         "sensiolabs/security-checker": "^6.0",
         "sylius-labs/coding-standard": "^3.1",
-        "symfony/browser-kit": "^4.4",
-        "symfony/debug-bundle": "^4.4|^5.0",
-        "symfony/dotenv": "^4.4|^5.0",
-        "symfony/intl": "^4.4|^5.0",
-        "symfony/web-profiler-bundle": "^4.4|^5.0",
-        "symfony/web-server-bundle": "^4.4|^5.0",
+        "symfony/browser-kit": "^4.4 || ^5.2",
+        "symfony/debug-bundle": "^4.4 || ^5.2",
+        "symfony/dotenv": "^4.4 || ^5.2",
+        "symfony/intl": "^4.4 || ^5.2",
+        "symfony/web-profiler-bundle": "^4.4 || ^5.2",
         "vimeo/psalm": "4.4.1"
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.x-dev"
+        }
     },
     "autoload": {
         "psr-4": {
@@ -46,22 +61,13 @@
             "Tests\\Webgriffe\\SyliusItalianInvoiceableOrderPlugin\\": "tests/"
         }
     },
-    "conflict": {
-        "symplify/package-builder": "^8.3.25"
-    },
     "autoload-dev": {
         "psr-4": {
             "App\\": "tests/Application/src"
         },
-        "classmap": ["tests/Application/Kernel.php"]
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "0.x-dev"
-        }
-    },
-    "config": {
-        "sort-packages": true
+        "classmap": [
+            "tests/Application/Kernel.php"
+        ]
     },
     "scripts": {
         "post-install-cmd": [
