--- a/tests/Behat/Resources/suites.yml
+++ b/tests/Behat/Resources/suites.yml
@@ -60,3 +60,32 @@ default:
 
             filters:
                 tags: "@invoiceable_address_book && @ui"
+
+        ui_applying_taxes:
+            contexts:
+                - sylius.behat.context.hook.doctrine_orm
+
+                - sylius.behat.context.transform.zone
+                - sylius.behat.context.transform.lexical
+                - sylius.behat.context.transform.shared_storage
+                - sylius.behat.context.transform.tax_category
+                - sylius.behat.context.transform.product
+                - sylius.behat.context.transform.channel
+                - sylius.behat.context.transform.theme
+                - webgriffe_sylius_italian_invoiceable_order.behat.context.transform.address
+
+                - sylius.behat.context.setup.channel
+                - sylius.behat.context.setup.shipping
+                - sylius.behat.context.setup.taxation
+                - sylius.behat.context.setup.product
+                - sylius.behat.context.setup.theme
+                - webgriffe_sylius_italian_invoiceable_order.behat.context.setup.zone
+                - webgriffe_sylius_italian_invoiceable_order.behat.context.setup.channel
+
+                - sylius.behat.context.ui.shop.cart
+                - sylius.behat.context.ui.shop.checkout.addressing
+                - sylius.behat.context.ui.shop.checkout.shipping
+                - webgriffe_sylius_italian_invoiceable_order.behat.context.ui.shop.checkout.addressing
+
+            filters:
+                tags: "@applying_taxes && @ui"
