Tries to fix the Roave BC break check

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -195,4 +195,5 @@ jobs:
             - name: fetch tags
               run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
             - name: Roave BC Check
-              uses: ./.github/actions/roave-bc-check
+              uses: docker://nyholm/roave-bc-check-ga
+              #uses: ./.github/actions/roave-bc-check
