--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "ext-soap": "*",
         "sandwich/vies-bundle": "^2.1",
         "sylius/sylius": "~1.8.0 || ~1.9.0",
         "webmozart/assert": "^1.9"
