--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -195,5 +195,4 @@ jobs:
             - name: fetch tags
               run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
             - name: Roave BC Check
-              uses: docker://nyholm/roave-bc-check-ga
-              #uses: ./.github/actions/roave-bc-check
+              uses: ./.github/actions/roave-bc-check
