--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,9 @@
         "symfony/dotenv": "^4.4 || ^5.2",
         "symfony/intl": "^4.4 || ^5.2",
         "symfony/web-profiler-bundle": "^4.4 || ^5.2",
-        "vimeo/psalm": "4.4.1"
+        "vimeo/psalm": "4.4.1",
+        "roave/backward-compatibility-check": "^4.0|^5.0",
+        "cweagans/composer-patches": "^1.7"
     },
     "config": {
         "sort-packages": true
@@ -53,6 +55,11 @@
     "extra": {
         "branch-alias": {
             "dev-master": "0.x-dev"
+        },
+        "patches": {
+            "roave/backward-compatibility-check": {
+                "Autoloads test files during the BC check": "patches/bc-check-autoload.patch"
+            }
         }
     },
     "autoload": {
