--- a/composer.json
+++ b/composer.json
@@ -45,8 +45,7 @@
         "symfony/dotenv": "^4.4 || ^5.2",
         "symfony/intl": "^4.4 || ^5.2",
         "symfony/web-profiler-bundle": "^4.4 || ^5.2",
-        "vimeo/psalm": "4.4.1",
-        "roave/backward-compatibility-check": "*"
+        "vimeo/psalm": "4.4.1"
     },
     "config": {
         "sort-packages": true
