Tries moving the references to the entities in the test environment only

--- a/tests/Application/config/packages/test/_sylius.yaml
+++ b/tests/Application/config/packages/test/_sylius.yaml
@@ -14,3 +14,15 @@ parameters:
 sylius_shop:
     product_grid:
         include_all_descendants: true
+
+sylius_addressing:
+    resources:
+        address:
+            classes:
+                model: App\Entity\Addressing\Address
+
+sylius_order:
+    resources:
+        order:
+            classes:
+                model: App\Entity\Order\Order
