--- a/composer.json
+++ b/composer.json
@@ -57,13 +57,13 @@
     },
     "autoload": {
         "psr-4": {
-            "Webgriffe\\SyliusItalianInvoiceableOrderPlugin\\": "src/",
-            "Tests\\Webgriffe\\SyliusItalianInvoiceableOrderPlugin\\": "tests/"
+            "Webgriffe\\SyliusItalianInvoiceableOrderPlugin\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\": "tests/Application/src"
+            "App\\": "tests/Application/src",
+            "Tests\\Webgriffe\\SyliusItalianInvoiceableOrderPlugin\\": "tests/"
         },
         "classmap": [
             "tests/Application/Kernel.php"
