--- a/roave-bc-check.yaml
+++ b/roave-bc-check.yaml
@@ -1,3 +1,4 @@
 parameters:
     ignoreErrors:
         - '#\[BC\] SKIPPED: Roave\\BetterReflection\\Reflection\\ReflectionClass ".*?" could not be found in the located source#'
+        - '#\[BC\] REMOVED: Class Tests\\Webgriffe\\SyliusItalianInvoiceableOrderPlugin\\.*? has been deleted#'
