Moves the autoloader definition back to the non-dev area with a more specific path

--- a/composer.json
+++ b/composer.json
@@ -57,13 +57,13 @@
     },
     "autoload": {
         "psr-4": {
-            "Webgriffe\\SyliusItalianInvoiceableOrderPlugin\\": "src/"
+            "Webgriffe\\SyliusItalianInvoiceableOrderPlugin\\": "src/",
+            "Tests\\Webgriffe\\SyliusItalianInvoiceableOrderPlugin\\Behat\\": "tests/Behat/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\": "tests/Application/src",
-            "Tests\\Webgriffe\\SyliusItalianInvoiceableOrderPlugin\\": "tests/"
+            "App\\": "tests/Application/src"
         },
         "classmap": [
             "tests/Application/Kernel.php"
