Allow plugin for Composer 2.2

--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,12 @@
         "vimeo/psalm": "4.7.1"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "phpstan/extension-installer": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "symfony/thanks": true
+        }
     },
     "extra": {
         "branch-alias": {
