--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.0",
         "sandwich/vies-bundle": "^2.1",
-        "sylius/sylius": "~1.9.0 || ~1.10.0@beta",
+        "sylius/sylius": "^1.11.2",
         "webmozart/assert": "^1.9"
     },
     "require-dev": {
@@ -29,19 +29,20 @@
         "friendsofsymfony/oauth-server-bundle": "^1.6 || >2.0.0-alpha.0 ^2.0@dev",
         "phpspec/phpspec": "^7.0",
         "phpstan/extension-installer": "^1.0",
-        "phpstan/phpstan": "0.12.85",
+        "phpstan/phpstan": "0.12.99",
         "phpstan/phpstan-doctrine": "0.12.33",
         "phpstan/phpstan-strict-rules": "^0.12.0",
         "phpstan/phpstan-webmozart-assert": "0.12.12",
         "phpunit/phpunit": "^9.5",
         "sensiolabs/security-checker": "^6.0",
         "sylius-labs/coding-standard": "^4.0",
-        "symfony/browser-kit": "^4.4 || ^5.2",
-        "symfony/debug-bundle": "^4.4 || ^5.2",
-        "symfony/dotenv": "^4.4 || ^5.2",
-        "symfony/intl": "^4.4 || ^5.2",
-        "symfony/web-profiler-bundle": "^4.4 || ^5.2",
-        "vimeo/psalm": "4.7.1"
+        "symfony/browser-kit": "^5.4",
+        "symfony/debug-bundle": "^5.4",
+        "symfony/dotenv": "^5.4",
+        "symfony/intl": "^5.4",
+        "symfony/web-profiler-bundle": "^5.4",
+        "vimeo/psalm": "4.7.1",
+        "polishsymfonycommunity/symfony-mocker-container": "^1.0"
     },
     "config": {
         "sort-packages": true,
@@ -53,7 +54,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.10-dev"
+            "dev-master": "1.11-dev"
         }
     },
     "autoload": {
