--- a/tests/Application/config/packages/_sylius.yaml
+++ b/tests/Application/config/packages/_sylius.yaml
@@ -14,6 +14,9 @@ sylius_shop:
     product_grid:
         include_all_descendants: true
 
+sylius_api:
+    enabled: true
+
 sylius_addressing:
     resources:
         address:
