--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "dragonbe/vies": "^2.3.2",
         "sandwich/vies-bundle": "^2.1",
         "sylius/sylius": "^1.12.9",
         "sylius/mailer-bundle":  "^1.8 || ^2.0",
