--- a/tests/TestApplication/config/config.yaml
+++ b/tests/TestApplication/config/config.yaml
@@ -5,3 +5,26 @@ imports:
 twig:
     paths:
         '%kernel.project_dir%/../../../tests/TestApplication/templates': ~
+
+doctrine:
+    orm:
+        entity_managers:
+            default:
+                mappings:
+                    TestApplication:
+                        is_bundle: false
+                        type: attribute
+                        dir: '%kernel.project_dir%/../../../tests/TestApplication/src/Entity'
+                        prefix: Tests\Webgriffe\SyliusItalianInvoiceableOrderPlugin
+
+sylius_addressing:
+    resources:
+        address:
+            classes:
+                model: Tests\Webgriffe\SyliusItalianInvoiceableOrderPlugin\Entity\Addressing\Address
+
+sylius_order:
+    resources:
+        order:
+            classes:
+                model: Tests\Webgriffe\SyliusItalianInvoiceableOrderPlugin\Entity\Order\Order
