Temporarily patch Sylius behat AddressPage class as it has a bug

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "behat/behat": "^3.16",
         "behat/mink": "^1.13",
         "behat/mink-selenium2-driver": "^1.7",
+        "cweagans/composer-patches": "^1.7",
         "dbrekelmans/bdi": "^1.4",
         "dmore/behat-chrome-extension": "^1.4",
         "dmore/chrome-mink-driver": "^2.9",
@@ -57,6 +58,7 @@
     "config": {
         "sort-packages": true,
         "allow-plugins": {
+            "cweagans/composer-patches": true,
             "dealerdirect/phpcodesniffer-composer-installer": false,
             "php-http/discovery": false,
             "phpstan/extension-installer": true,
@@ -71,7 +73,12 @@
         "symfony": {
             "require": "^6.4"
         },
-        "public-dir": "vendor/sylius/test-application/public"
+        "public-dir": "vendor/sylius/test-application/public",
+        "patches": {
+            "sylius/sylius": {
+                "Cast ID to string in Behat AddressPage class": "patches/sylius-behat-cast-id-to-string.patch"
+            }
+        }
     },
     "repositories": {
         "sandwich/vies-bundle": {
