Use test FCQN for entities to validate

--- a/tests/TestApplication/config/config.yaml
+++ b/tests/TestApplication/config/config.yaml
@@ -6,6 +6,12 @@ twig:
     paths:
         '%kernel.project_dir%/../../../tests/TestApplication/templates': ~
 
+framework:
+    validation:
+        mapping:
+            paths:
+                - '%kernel.project_dir%/../../../tests/TestApplication/config/validation/'
+
 doctrine:
     orm:
         entity_managers:
