--- a/tests/Behat/Resources/suites.yml
+++ b/tests/Behat/Resources/suites.yml
@@ -19,6 +19,7 @@ default:
                 - sylius.behat.context.setup.shipping
                 - sylius.behat.context.setup.geographical
                 - sylius.behat.context.setup.payment
+                - sylius.behat.context.setup.cart
                 - webgriffe_sylius_italian_invoiceable_order.behat.context.setup.channel
 
                 - sylius.behat.context.ui.shop.cart
@@ -47,6 +48,7 @@ default:
                 - sylius.behat.context.setup.shipping
                 - sylius.behat.context.setup.payment
                 - sylius.behat.context.setup.shop_security
+                - sylius.behat.context.setup.cart
                 - webgriffe_sylius_italian_invoiceable_order.behat.context.setup.channel
                 - webgriffe_sylius_italian_invoiceable_order.behat.context.setup.invoiceable_address
 
@@ -72,19 +74,26 @@ default:
                 - sylius.behat.context.transform.product
                 - sylius.behat.context.transform.channel
                 - sylius.behat.context.transform.theme
+                - sylius.behat.context.transform.shipping_method
+                - sylius.behat.context.transform.payment
                 - webgriffe_sylius_italian_invoiceable_order.behat.context.transform.address
 
                 - sylius.behat.context.setup.channel
                 - sylius.behat.context.setup.shipping
+                - sylius.behat.context.setup.payment
                 - sylius.behat.context.setup.taxation
                 - sylius.behat.context.setup.product
                 - sylius.behat.context.setup.theme
+                - sylius.behat.context.setup.cart
+                - sylius.behat.context.setup.order
                 - webgriffe_sylius_italian_invoiceable_order.behat.context.setup.zone
                 - webgriffe_sylius_italian_invoiceable_order.behat.context.setup.channel
 
                 - sylius.behat.context.ui.shop.cart
+                - sylius.behat.context.ui.shop.checkout
                 - sylius.behat.context.ui.shop.checkout.addressing
                 - sylius.behat.context.ui.shop.checkout.shipping
+                - sylius.behat.context.ui.shop.checkout.complete
                 - webgriffe_sylius_italian_invoiceable_order.behat.context.ui.shop.checkout.addressing
 
             filters:
