--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,7 +6,7 @@ on:
             - 'dependabot/**'
     pull_request: ~
     release:
-        types: [created]
+        types: [ created ]
     schedule:
         -
             cron: "0 1 * * 6" # Run at 1am every Saturday
@@ -21,11 +21,11 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: ["8.4"]
-                symfony: ["^7.3"]
-                sylius: ["~2.2.0"]
-                node: ["22.x"]
-                mysql: ["8.4"]
+                php: [ "8.3", "8.4" ]
+                symfony: [ "^7.4" ]
+                sylius: [ "~2.2.1" ]
+                node: [ "22.x" ]
+                mysql: [ "8.4" ]
 
         env:
             APP_ENV: test
@@ -42,7 +42,7 @@ jobs:
                 with:
                     php-version: "${{ matrix.php }}"
                     extensions: intl
-                    tools: flex,symfony
+                    tools: flex, symfony
                     coverage: none
 
             -
@@ -65,10 +65,6 @@ jobs:
             -
                 name: Output PHP version for Symfony CLI
                 run: php -v | head -n 1 | awk '{ print $2 }' > .php-version
-
-            -
-                name: Validate composer.json
-                run: composer validate --ansi --strict
 
             -
                 name: Get Composer cache directory
@@ -102,11 +98,7 @@ jobs:
                 run: composer install --no-interaction
 
             -
-                name: Validate container
-                run: vendor/bin/console lint:container
-
-            -
-                name: Run ECS
+                name: RUN EasyCodingStandard
                 run: vendor/bin/ecs check
 
             -
@@ -116,10 +108,6 @@ jobs:
             -
                 name: Run Psalm
                 run: vendor/bin/psalm
-
-            -
-                name: Run PHPSpec
-                run: vendor/bin/phpspec run --ansi -f progress --no-interaction
 
             -
                 name: Run unit tests
@@ -150,10 +138,6 @@ jobs:
                     (vendor/bin/console doctrine:schema:create -vvv)
 
             -
-                name: Validate database schema
-                run: vendor/bin/console doctrine:schema:validate
-
-            -
                 name: Prepare test application assets
                 run: |
                     vendor/bin/console assets:install -vvv
@@ -168,16 +152,24 @@ jobs:
                 run: vendor/bin/console sylius:fixtures:load -n
 
             -
+                name: Validate composer.json
+                run: composer validate --ansi --strict
+
+            -
+                name: Validate container
+                run: vendor/bin/console lint:container
+
+            -
                 name: Run Non-unit PHPUnit tests
                 run: vendor/bin/phpunit --colors=always --testsuite=non-unit
 
             -
-                name: Install certificates
-                run: symfony server:ca:install || true
-
-            -
                 name: Run Chrome Headless
                 run: google-chrome-stable --enable-automation --disable-background-networking --no-default-browser-check --no-first-run --disable-popup-blocking --disable-default-apps --allow-insecure-localhost --disable-translate --disable-extensions --no-sandbox --enable-features=Metal --headless --remote-debugging-port=9222 --window-size=2880,1800 --proxy-server='direct://' --proxy-bypass-list='*' http://127.0.0.1 > /dev/null 2>&1 &
+
+            -
+                name: Install certificates
+                run: symfony server:ca:install || true
 
             -
                 name: Run webserver
@@ -185,7 +177,7 @@ jobs:
 
             -
                 name: Run Behat
-                run: vendor/bin/behat --colors --strict -vvv --no-interaction || vendor/bin/behat --colors --strict -vvv --no-interaction --rerun
+                run: vendor/bin/behat --colors --strict -vvv --no-interaction -f progress || vendor/bin/behat --colors --strict -vvv --no-interaction -f progress --rerun
 
             -
                 name: Upload Behat logs
