Replace yaml with php files

--- a/tests/TestApplication/config/config.yaml
+++ b/tests/TestApplication/config/config.yaml
@@ -1,5 +1,5 @@
 imports:
-    - { resource: "@WebgriffeSyliusItalianInvoiceableOrderPlugin/config/config.yaml" }
+    - { resource: "@WebgriffeSyliusItalianInvoiceableOrderPlugin/config/config.php" }
     - { resource: "services_test.php" }
 
 twig:
